search keyword property파일로

--- a/settings/settings.properties
+++ b/settings/settings.properties
@@ -1,3 +1,9 @@
 chimaera=ATCGACGAAGGTTCGGGTTTTCTCGGATT
 intracellularae=ATCGACGAAGGTCCGGGTTTTCTCGGATT
+keyword_16sF=16s_F
+keyword_16sR=16s_R
+keyword_rpoF=rpo_F
+keyword_rpoR=rpo_R
+keyword_tufF=tuf_F
+keyword_tufR=tuf_R
 fontsize=13
