consensus seq popup

--- a/settings/settings.properties
+++ b/settings/settings.properties
@@ -3,7 +3,7 @@ intracellularae=ATCGACGAAGGTCCGGGTTTTCTCGGATT
 keyword_16sF= 16s_F , 16S_F 
 keyword_16sR=16s_R, 16S_R
 keyword_rpoF=rpo_F, rpoB_F
-keyword_rpoR=rpo_R, rpoB_F
+keyword_rpoR=rpo_R, rpoB_R
 keyword_tufF=tuf_F
 keyword_tufR=tuf_R
 fontsize=13
