--- a/settings/settings.properties
+++ b/settings/settings.properties
@@ -1,11 +1,11 @@
 chimaera=ATCGACGAAGGTTCGGGTTTTCTCGGATT
 intracellularae=ATCGACGAAGGTCCGGGTTTTCTCGGATT
-keyword_16sF= 16s_F , 16S_F 
-keyword_16sR=16s_R, 16S_R
-keyword_rpoF=rpo_F, rpoB_F
-keyword_rpoR=rpo_R, rpoB_R
-keyword_tufF=tuf_F
-keyword_tufR=tuf_R
+keyword_16sF= 16s_F_ , 16S_F_ 
+keyword_16sR=16s_R_, 16S_R_
+keyword_rpoF=rpo_F_, rpoB_F_
+keyword_rpoR=rpo_R_, rpoB_R_
+keyword_tufF=tuf_F_
+keyword_tufR=tuf_R_
 fontsize=13
 header_height=18
 sample_id_length=4
