--- a/settings/settings.properties
+++ b/settings/settings.properties
@@ -1,5 +1,7 @@
 chimaera=ATCGACGAAGGTTCGGGTTTTCTCGGATT
 intracellularae=ATCGACGAAGGTCCGGGTTTTCTCGGATT
+chimaera_name=Mycobacterium_chimaera
+intracellularae_name=Mycobacterium_intracellulare
 keyword_16sF= 16s_F_ , 16S_F_ 
 keyword_16sR=16s_R_, 16S_R_
 keyword_rpoF=rpo_F_, rpoB_F_
