--- a/settings/settings.properties
+++ b/settings/settings.properties
@@ -2,13 +2,13 @@ chimaera=ATCGACGAAGGTTCGGGTTTTCTCGGATT
 intracellularae=ATCGACGAAGGTCCGGGTTTTCTCGGATT
 chimaera_name=Mycobacterium_chimaera
 intracellularae_name=Mycobacterium_intracellulare
-keyword_16sF= 16s_F_ , 16S_F_ 
-keyword_16sR=16s_R_, 16S_R_
-keyword_rpoF=rpo_F_, rpoB_F_
-keyword_rpoR=rpo_R_, rpoB_R_
-keyword_tufF=tuf_F_
-keyword_tufR=tuf_R_
+keyword_16sF= 16s_F_ , 16S_F_, 16S-F_, 16s-F_
+keyword_16sR=16s_R_, 16S_R_, 16S-R_, 16s-R_
+keyword_rpoF=rpo_F_, rpoB_F_, rpo-F_, rpoB-F_
+keyword_rpoR=rpo_R_, rpoB_R_, rpo-R_, rpoB-R_
+keyword_tufF=tuf_F_, tuf-F_
+keyword_tufR=tuf_R_, tuf-R_
 fontsize=13
 header_height=18
-sample_id_length=4
+sample_id_length=4	#not used anymore (from V1.3.5)
 end_penalty=2.0
