--- a/settings/settings.properties
+++ b/settings/settings.properties
@@ -1,7 +1,5 @@
-chimaera=ATCGACGAAGGTTCGGGTTTTCTCGGATT
-intracellularae=ATCGACGAAGGTCCGGGTTTTCTCGGATT
-chimaera_name=Mycobacterium_chimaera
-intracellularae_name=Mycobacterium_intracellulare
+ref_file_16s=ref16s_ver2.1.fasta
+ref_file_rpoB=refrpob_ver2.1.fasta
 keyword_16sF= 16s_F_ , 16S_F_, 16S-F_, 16s-F_
 keyword_16sR=16s_R_, 16S_R_, 16S-R_, 16s-R_
 keyword_rpoF=rpo_F_, rpoB_F_, rpo-F_, rpoB-F_
@@ -12,3 +10,7 @@ fontsize=13
 header_height=18
 sample_id_length=4	#not used anymore (from V1.3.5)
 end_penalty=2.0
+chimaera=ATCGACGAAGGTTCGGGTTTTCTCGGATT
+intracellularae=ATCGACGAAGGTCCGGGTTTTCTCGGATT
+chimaera_name=Mycobacterium_chimaera
+intracellularae_name=Mycobacterium_intracellulare
